Example of running Holyrics in the module-path